# serializer version: 1
# name: test_switches[switch.test_ha_2_auto-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_ha_2_auto',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto',
    'unique_id': '0123456789abcdef0123456789abcdef_auto',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_ha_2_auto-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test ha 2 Auto',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_ha_2_auto',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_ha_2_auto_plus-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_ha_2_auto_plus',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto plus',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_plus',
    'unique_id': '0123456789abcdef0123456789abcdef_auto_plus',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_ha_2_auto_plus-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test ha 2 Auto plus',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_ha_2_auto_plus',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_ha_2_bound-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_ha_2_bound',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bound',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bound',
    'unique_id': '0123456789abcdef0123456789abcdef_bound',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_ha_2_bound-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test ha 2 Bound',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_ha_2_bound',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_ha_2_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_ha_2_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater',
    'unique_id': '0123456789abcdef0123456789abcdef_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_ha_2_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test ha 2 Heater',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_ha_2_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_ha_2_winter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_ha_2_winter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'winter',
    'unique_id': '0123456789abcdef0123456789abcdef_winter',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_ha_2_winter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test ha 2 Winter',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_ha_2_winter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
